# altinet-localnode

./: .env.example  README.md  pyproject.toml  requirements.txt
data/altinet/agents/: agents.json
data/altinet/context/: house_context.json  user_context.json
data/altinet/devices/: devices.json
data/altinet/home/: home.json
data/altinet/users/: users.json
examples/: sample_house_state.json
src/altinet/: __init__.py  main.py
src/altinet/assistant/: __init__.py  local_engine.py  models.py  openai_engine.py  prompt_builder.py
src/altinet/context/: contextualiser.py  schemas.py
src/altinet/core/: __init__.py
src/altinet/decision/: mock_engine.py  openai_engine.py  prompt_builder.py
src/altinet/display/: __init__.py  app.py  routes.py  state_adapter.py
src/altinet/domain/: access.py  agents.py  context.py  devices.py  home.py  users.py
src/altinet/events/: __init__.py  models.py  processor.py  queue.py
src/altinet/home/: __init__.py  default_home.py  models.py  storage.py
src/altinet/memory/: __init__.py  system.py
src/altinet/perception/: capture.py  models.py  pipeline.py  room_context.py  vision_engine.py  webcam.py
tests/: test_assistant_openai_chat.py  test_backend_store.py  test_contextualiser.py  test_display_dashboard.py  test_events.py  test_home_builder.py  test_home_location_weather.py  test_main.py  test_memory_system.py  test_mock_engine.py  test_perception_pipeline.py  test_prompt_builder.py  test_runtime_state_manager.py  test_schemas.py  test_state_adapter.py  test_users_and_assistant.py  test_vision_engine.py
(+19 files in other folders)
