[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "altinet-localnode"
version = "0.1.0"
description = "Altinet LocalNode prototype"
authors = [
  { name="Elliot Harris" }
]
requires-python = ">=3.11"

dependencies = [
  "pydantic",
  "pytest",
  "python-dotenv",
  "opencv-python"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]